css code refactor, style added, popup text overflow fixed

--- a/assets/css/faq.css
+++ b/assets/css/faq.css
@@ -1,6 +1,5 @@
 body {
   min-height: 100vh;
-  padding-bottom: 80px;
 }
 nav {
   display: flex;
@@ -16,7 +15,8 @@ nav {
   text-align: center;
   transition: 0.1s;
 }
-.nav-btn-Faq:hover {
+.nav-btn-Faq:hover,
+.nav-btn-Faq:focus {
   border-bottom: 2px solid var(--first-font-color);
 }
 .header {
@@ -24,21 +24,13 @@ nav {
   width: 100%;
   height: 300px;
   overflow: hidden;
-  background-image: url("../img/faqBg.webp");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+    url("../img/faqBg.webp");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: left;
   -webkit-animation: bgAnimate 30s linear alternate infinite;
   animation: bgAnimate 30s linear alternate infinite;
-}
-.header::before {
-  content: "";
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background: rgba(0, 0, 0, 0.5);
 }
 @-webkit-keyframes bgAnimate {
   0% {
@@ -125,8 +117,6 @@ nav {
   margin-right: 20px;
 }
 footer {
-  position: relative;
-  bottom: -85px;
   width: 100%;
   background: var(--first-color);
   height: 80px;
