--- a/assets/css/hotspot.css
+++ b/assets/css/hotspot.css
@@ -20,21 +20,13 @@ nav {
   width: 100%;
   height: 300px;
   overflow: hidden;
-  background-image: url("../img/faqBg.webp");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+    url("../img/faqBg.webp");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: left;
   -webkit-animation: bgAnimate 30s linear alternate infinite;
   animation: bgAnimate 30s linear alternate infinite;
-}
-.header::before {
-  content: "";
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background: rgba(0, 0, 0, 0.5);
 }
 @-webkit-keyframes bgAnimate {
   0% {
@@ -110,7 +102,7 @@ main {
   flex-wrap: wrap;
 }
 .category-selected p {
-  margin: 0 15px 15px 15px;
+  margin: 0 5px 5px 5px;
   padding: 5px 10px;
   border-radius: 10px;
   background: rgba(165, 42, 42, 0.8);
@@ -122,9 +114,7 @@ main {
   margin-top: 50px;
   min-height: 200px;
 }
-.pageCheck {
-  display: none;
-}
+.pageCheck,
 .pageCheck + label {
   display: none;
 }
@@ -199,18 +189,11 @@ main {
   justify-content: space-between;
 }
 .container-item-text-desc {
-  position: relative;
+  width: 200px;
+  font-size: 1.2rem;
   text-overflow: ellipsis;
-  word-wrap: break-word;
+  white-space: nowrap;
   overflow: hidden;
-}
-.container-item-text-desc::before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 30px;
-  bottom: 0;
-  background: linear-gradient(transparent, whitesmoke);
 }
 .container-item-text-location a {
   color: black;
@@ -248,6 +231,7 @@ main {
   border: none;
   background: red;
   cursor: pointer;
+  border-radius: 5px;
   z-index: 10;
 }
 .popup > button span {
@@ -262,12 +246,13 @@ main {
   background: whitesmoke;
   position: relative;
   width: 100%;
-  height: 80%;
+  height: 100%;
   display: flex;
   flex-direction: column-reverse;
   align-items: center;
   justify-content: space-around;
   padding-bottom: 20px;
+  border-radius: 5px 5px 0 0;
   pointer-events: all;
 }
 .popup .slider-img {
@@ -296,18 +281,28 @@ main {
 .popup .container-item-img img:hover {
   border: 2px solid var(--first-color);
 }
+.popup .container-item-img .active {
+  border: 2px solid var(--first-color);
+}
 .popup .container-item-text {
   background: whitesmoke;
+  border-radius: 0 0 5px 5px;
   width: 100%;
-  height: 20%;
+  height: auto;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
   text-align: center;
+  padding: 10px;
 }
-.popup .container-item-text-desc::before {
-  display: none;
+.popup .container-item-text-desc {
+  width: 100%;
+  height: auto;
+  font-size: 1rem;
+  text-overflow: ellipsis;
+  white-space: normal;
+  overflow: hidden;
 }
 #page-numbers {
   margin-top: 25px;
@@ -402,7 +397,6 @@ footer {
   }
   .container-item-text {
     width: 80%;
-    min-height: 200px;
     height: auto;
     justify-content: center;
   }
@@ -424,8 +418,5 @@ footer {
   .popup .container-item-img {
     height: 500px;
     width: 100%;
-  }
-  .popup .container-item-text {
-    height: 200px;
   }
 }
