--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -67,117 +67,12 @@ nav {
   top: 0%;
   left: 80%;
   -webkit-animation: svgPin 15s linear infinite;
-  -moz-animation: svgPin 15s linear infinite;
-  -ms-animation: svgPin 15s linear infinite;
-  -o-animation: svgPin 15s linear infinite;
   animation: svgPin 15s linear infinite;
 }
 .loader svg path {
   fill: var(--first-color);
 }
 @-webkit-keyframes svgPin {
-  0% {
-    top: -10%;
-    left: 50%;
-  }
-  14% {
-    top: -10%;
-    left: 0%;
-  }
-  29% {
-    top: 40%;
-    left: -10%;
-  }
-  43% {
-    top: 70%;
-    left: 20%;
-  }
-  58% {
-    top: 30%;
-    left: 30%;
-  }
-  72% {
-    top: 70%;
-    left: 50%;
-  }
-  88% {
-    top: 0%;
-    left: 80%;
-  }
-  100% {
-    top: -10%;
-    left: 50%;
-  }
-}
-@-moz-keyframes svgPin {
-  0% {
-    top: -10%;
-    left: 50%;
-  }
-  14% {
-    top: -10%;
-    left: 0%;
-  }
-  29% {
-    top: 40%;
-    left: -10%;
-  }
-  43% {
-    top: 70%;
-    left: 20%;
-  }
-  58% {
-    top: 30%;
-    left: 30%;
-  }
-  72% {
-    top: 70%;
-    left: 50%;
-  }
-  88% {
-    top: 0%;
-    left: 80%;
-  }
-  100% {
-    top: -10%;
-    left: 50%;
-  }
-}
-@-ms-keyframes svgPin {
-  0% {
-    top: -10%;
-    left: 50%;
-  }
-  14% {
-    top: -10%;
-    left: 0%;
-  }
-  29% {
-    top: 40%;
-    left: -10%;
-  }
-  43% {
-    top: 70%;
-    left: 20%;
-  }
-  58% {
-    top: 30%;
-    left: 30%;
-  }
-  72% {
-    top: 70%;
-    left: 50%;
-  }
-  88% {
-    top: 0%;
-    left: 80%;
-  }
-  100% {
-    top: -10%;
-    left: 50%;
-  }
-}
-@-o-keyframes svgPin {
   0% {
     top: -10%;
     left: 50%;
@@ -285,19 +180,7 @@ header {
   display: flex;
   justify-content: center;
   overflow: hidden;
-  background-position-x: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-header::before {
-  content: "";
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
   background: rgba(0, 0, 0, 0.5);
-  pointer-events: none;
 }
 .header-bg {
   position: absolute;
